# wasm_synth_gui

./: Cargo.toml  README.md  Trunk.toml  index.html  wasm_synth_gui.js  wasm_synth_gui_bg.wasm
.cargo/: config.toml
.fleet/: run.json
assets/: Caddyfile  _headers  unlock-audio-context.js
src/: app.rs  audio.rs  lib.rs  main.rs
