[package]
name = "wasm_synth_gui"
version = "0.1.0"
authors = ["Nikita Dudnik <nikdudnik@gmail.com>"]
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
cpal = {path = "../cpal", features = ["wasm-bindgen"] }
fundsp = "0.9.0"
ringbuf = "0.3.0-rc.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_thread = {version = "0.2.0", features = ["es_modules"]}
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
web-sys = {version = "0.3.60", features = ["Window", "Document", "Event", "AddEventListenerOptions", "EventTarget"]}
wasm-bindgen = "0.2.83"

[profile.release]
opt-level = "z" # fast and small wasm
# target = "wasm32-unknown-unknown"
# strip = true
# lto = true
# panic = "abort"

# [patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
