[package]
name = "wasm_synth_gui"
version = "0.1.0"
authors = ["Nikita Dudnik <nikdudnik@gmail.com>"]
edition = "2021"
rust-version = "1.66"

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
cpal = {git = "https://github.com/Nek/cpal", features = ["wasm-bindgen"] }
fundsp = "0.9.0"
ringbuf = "0.3.0-rc.0"
wasm_thread = {version = "0.2.0", features = ["es_modules"]}
glicol_synth = "0.12.8"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.83"

[profile.release]
opt-level = "z"
lto = true
